[gd_scene load_steps=9 format=3 uid="uid://cv6vihdg3j6c6"]

[ext_resource type="PackedScene" uid="uid://icnmy38m21bg" path="res://Player/lallu.tscn" id="1_i0db7"]
[ext_resource type="Script" path="res://Scene_3/Level_3.gd" id="1_wduqg"]
[ext_resource type="PackedScene" uid="uid://d8ag5d0jx6dj" path="res://Egg/egg.tscn" id="2_we7ii"]
[ext_resource type="PackedScene" uid="uid://bm2ewntdv41g2" path="res://Map/base_map.tscn" id="4_qlvfd"]
[ext_resource type="Texture2D" uid="uid://cwhhh83msggvj" path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Vortex/vortex.png" id="5_7h3vv"]
[ext_resource type="Texture2D" uid="uid://u33bgapyrltr" path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Bomb/bomb.png" id="6_pcik8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_swsmm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wans5"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_wduqg")

[node name="Lallu" parent="." instance=ExtResource("1_i0db7")]
position = Vector2(47, 163)

[node name="Egg" parent="." instance=ExtResource("2_we7ii")]
position = Vector2(298, 276)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(273, 186)
zoom = Vector2(1.5, 1.5)

[node name="close_map" parent="." instance=ExtResource("4_qlvfd")]
layer_1/tile_data = PackedInt32Array(0, 65536, 0, 65536, 0, 1, 131072, 0, 1, 196608, 0, 1, 262144, 0, 1, 327680, 0, 1, 393216, 0, 1, 458752, 0, 1, 524288, 0, 1, 589824, 0, 1, 655360, 0, 1, 720896, 0, 1, 786432, 0, 1, 851968, 0, 1, 917504, 65536, 1, 983040, 0, 1, 1114112, 0, 1, 1179648, 0, 1, 1245184, 0, 1, 1310720, 0, 1, 1376256, 0, 1, 1441792, 65536, 2, 65568, 0, 1, 131104, 0, 1, 196640, 0, 1, 262176, 0, 1, 327712, 0, 1, 393248, 0, 1, 458784, 0, 1, 524320, 0, 1, 589856, 0, 1, 655392, 0, 1, 720928, 0, 1, 786464, 0, 1, 852000, 0, 1, 917536, 0, 1, 983072, 0, 1, 1376288, 0, 0, 32, 196608, 0, 1441824, 196608, 2, 1441793, 131072, 3, 1441794, 131072, 3, 1441795, 131072, 3, 1441796, 131072, 3, 1441797, 131072, 3, 1441798, 131072, 3, 1441799, 131072, 3, 1441800, 131072, 3, 1441801, 131072, 3, 1441802, 131072, 3, 1441803, 131072, 3, 1441804, 131072, 3, 1441806, 131072, 2, 1441807, 131072, 3, 1441808, 131072, 3, 1441809, 131072, 3, 1441810, 131072, 3, 1441811, 131072, 3, 1441812, 131072, 2, 1441813, 131072, 3, 1441814, 131072, 3, 1441815, 131072, 3, 1441816, 131072, 3, 1441817, 131072, 3, 1441818, 131072, 3, 1441819, 131072, 2, 1441820, 131072, 3, 1441821, 131072, 3, 1441822, 131072, 3, 1441823, 131072, 3, 1, 131072, 3, 2, 131072, 3, 3, 131072, 3, 4, 131072, 3, 5, 131072, 3, 6, 131072, 3, 7, 131072, 3, 9, 131072, 3, 10, 131072, 0, 11, 131072, 3, 12, 131072, 3, 13, 131072, 3, 14, 131072, 3, 15, 131072, 3, 16, 131072, 3, 17, 131072, 3, 19, 131072, 0, 20, 131072, 3, 21, 131072, 3, 22, 131072, 3, 23, 131072, 3, 24, 131072, 3, 25, 131072, 3, 26, 131072, 3, 27, 131072, 3, 28, 131072, 3, 29, 131072, 3, 30, 131072, 3, 31, 131072, 3, 1048576, 0, 1, 1441805, 131072, 3, 8, 131072, 3, 18, 131072, 3, 1048608, 196608, 1, 917505, 131072, 3, 917506, 131072, 3, 917507, 131072, 3, 917508, 131072, 3, 917509, 196608, 3, 327684, 0, 1, 393220, 0, 1, 458756, 0, 1, 524292, 0, 1, 589828, 65536, 2, 262148, 65536, 0, 262149, 131072, 3, 262150, 131072, 3, 262151, 196608, 3, 589829, 131072, 3, 589830, 131072, 3, 589831, 131072, 0, 589832, 196608, 2, 589835, 0, 2, 655367, 0, 1, 720903, 0, 1, 786439, 0, 2, 1179652, 65536, 3, 1179653, 131072, 3, 1179654, 131072, 3, 1179655, 131072, 3, 1179656, 131072, 3, 1179657, 196608, 2, 1245198, 0, 0, 1310734, 0, 1, 1376270, 0, 1, 983057, 0, 0, 1048593, 0, 1, 1114129, 0, 1, 1179665, 65536, 2, 1179666, 131072, 3, 1179667, 131072, 3, 1179668, 131072, 0, 983063, 0, 1, 1245204, 0, 1, 1310740, 0, 1, 1376276, 0, 0, 65546, 0, 2, 262154, 0, 0, 327690, 0, 1, 393226, 0, 1, 458762, 131072, 2, 327694, 65536, 3, 327695, 196608, 0, 589840, 131072, 3, 589841, 131072, 3, 589842, 196608, 3, 917525, 131072, 3, 917526, 131072, 3, 917527, 131072, 0, 917528, 131072, 3, 917529, 131072, 3, 917530, 196608, 2, 327704, 131072, 3, 327705, 131072, 3, 327706, 131072, 0, 327707, 131072, 3, 327708, 196608, 2, 327703, 65536, 0, 393239, 0, 1, 458775, 0, 1, 524311, 0, 2, 720916, 0, 0, 786452, 0, 1, 851988, 0, 1, 917524, 65536, 2, 393242, 0, 1, 458778, 0, 1, 524314, 0, 1, 589850, 0, 2, 851994, 0, 0, 65555, 0, 1, 131091, 0, 1, 196627, 0, 1, 262163, 0, 1, 327699, 0, 2, 393231, 0, 1, 458767, 0, 1, 524303, 0, 1, 589839, 65536, 2, 1048605, 65536, 3, 1048606, 131072, 3, 1048607, 131072, 3, 524296, 0, 1, 458760, 65536, 0, 458761, 131072, 3, 458763, 196608, 0, 524299, 0, 1, 262172, 0, 1, 196636, 0, 0, 851980, 0, 1, 917516, 0, 2, 786444, 0, 0, 1048585, 0, 0, 1114121, 0, 1, 1179669, 196608, 3, 1048599, 0, 2, 1310752, 0, 1, 1245216, 0, 1, 1179680, 0, 1, 1114144, 0, 1)

[node name="open_map" parent="." instance=ExtResource("4_qlvfd")]
visible = false
layer_1/tile_data = PackedInt32Array(0, 65536, 0, 65536, 0, 1, 131072, 0, 1, 196608, 0, 1, 262144, 0, 1, 327680, 0, 1, 393216, 0, 1, 458752, 0, 1, 524288, 0, 1, 589824, 0, 1, 655360, 0, 1, 720896, 0, 1, 786432, 0, 1, 851968, 0, 1, 917504, 65536, 1, 983040, 0, 1, 1114112, 0, 1, 1179648, 0, 1, 1245184, 0, 1, 1310720, 0, 1, 1376256, 0, 1, 1441792, 65536, 2, 65568, 0, 1, 131104, 0, 1, 196640, 0, 1, 262176, 0, 1, 327712, 0, 1, 393248, 0, 1, 458784, 0, 1, 524320, 0, 1, 589856, 0, 1, 655392, 0, 1, 720928, 0, 1, 786464, 0, 1, 852000, 0, 1, 917536, 0, 1, 983072, 0, 1, 1376288, 0, 0, 32, 196608, 0, 1441824, 196608, 2, 1441793, 131072, 3, 1441794, 131072, 3, 1441795, 131072, 3, 1441796, 131072, 3, 1441797, 131072, 3, 1441798, 131072, 3, 1441799, 131072, 3, 1441800, 131072, 3, 1441801, 131072, 3, 1441802, 131072, 3, 1441803, 131072, 3, 1441804, 131072, 3, 1441806, 131072, 2, 1441807, 131072, 3, 1441808, 131072, 3, 1441809, 131072, 3, 1441810, 131072, 3, 1441811, 131072, 3, 1441812, 131072, 2, 1441813, 131072, 3, 1441814, 131072, 3, 1441815, 131072, 3, 1441816, 131072, 3, 1441817, 131072, 3, 1441818, 131072, 3, 1441819, 131072, 2, 1441820, 131072, 3, 1441821, 131072, 3, 1441822, 131072, 3, 1441823, 131072, 3, 1, 131072, 3, 2, 131072, 3, 3, 131072, 3, 4, 131072, 3, 5, 131072, 3, 6, 131072, 3, 7, 131072, 3, 9, 131072, 3, 10, 131072, 0, 11, 131072, 3, 12, 131072, 3, 13, 131072, 3, 14, 131072, 3, 15, 131072, 3, 16, 131072, 3, 17, 131072, 3, 19, 131072, 0, 20, 131072, 3, 21, 131072, 3, 22, 131072, 3, 23, 131072, 3, 24, 131072, 3, 25, 131072, 3, 26, 131072, 3, 27, 131072, 3, 28, 131072, 3, 29, 131072, 3, 30, 131072, 3, 31, 131072, 3, 1048576, 0, 1, 1441805, 131072, 3, 8, 131072, 3, 18, 131072, 3, 1048608, 196608, 2, 917505, 131072, 3, 917506, 131072, 3, 917507, 131072, 3, 917508, 131072, 3, 917509, 196608, 3, 327684, 0, 1, 393220, 0, 1, 458756, 0, 1, 524292, 0, 1, 589828, 65536, 2, 262148, 65536, 0, 262149, 131072, 3, 262150, 131072, 3, 262151, 196608, 3, 589829, 131072, 3, 589830, 131072, 3, 589831, 131072, 0, 589832, 196608, 2, 589835, 0, 2, 655367, 0, 1, 720903, 0, 1, 786439, 0, 2, 1179652, 65536, 3, 1179653, 131072, 3, 1179654, 131072, 3, 1179655, 131072, 3, 1179656, 131072, 3, 1179657, 196608, 2, 1245198, 0, 0, 1310734, 0, 1, 1376270, 0, 1, 983057, 0, 0, 1048593, 0, 1, 1114129, 0, 1, 1179665, 65536, 2, 1179666, 131072, 3, 1179667, 131072, 3, 1179668, 131072, 0, 983063, 0, 1, 1245204, 0, 1, 1310740, 0, 1, 1376276, 0, 0, 65546, 0, 2, 262154, 0, 0, 327690, 0, 1, 393226, 0, 1, 458762, 131072, 2, 327694, 65536, 3, 327695, 196608, 0, 589840, 131072, 3, 589841, 131072, 3, 589842, 196608, 3, 917525, 131072, 3, 917526, 131072, 3, 917527, 131072, 0, 917528, 131072, 3, 917529, 131072, 3, 917530, 196608, 2, 327704, 131072, 3, 327705, 131072, 3, 327706, 131072, 0, 327707, 131072, 3, 327708, 196608, 2, 327703, 65536, 0, 393239, 0, 1, 458775, 0, 1, 524311, 0, 2, 720916, 0, 0, 786452, 0, 1, 851988, 0, 1, 917524, 65536, 2, 393242, 0, 1, 458778, 0, 1, 524314, 0, 1, 589850, 0, 2, 851994, 0, 0, 65555, 0, 1, 131091, 0, 1, 196627, 0, 1, 262163, 0, 1, 327699, 0, 2, 393231, 0, 1, 458767, 0, 1, 524303, 0, 1, 589839, 65536, 2, 1048605, 65536, 3, 1048606, 131072, 3, 1048607, 131072, 3, 524296, 0, 1, 458760, 65536, 0, 458761, 131072, 3, 458763, 196608, 0, 524299, 0, 1, 262172, 0, 1, 196636, 0, 0, 851980, 0, 1, 917516, 0, 2, 786444, 0, 0, 1048585, 0, 0, 1114121, 0, 1, 1179669, 196608, 3, 1048599, 0, 2)

[node name="finish" type="Area2D" parent="open_map"]
position = Vector2(560, 304)

[node name="finish_collision" type="CollisionShape2D" parent="open_map/finish"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_swsmm")

[node name="vortex" type="Area2D" parent="open_map"]
position = Vector2(560, 304)

[node name="vortex_sprite" type="Sprite2D" parent="open_map/vortex"]
z_index = 1
scale = Vector2(0.084, 0.084)
texture = ExtResource("5_7h3vv")

[node name="vortex_collision" type="CollisionShape2D" parent="open_map/vortex"]
scale = Vector2(4.5, 4.5)
shape = SubResource("CircleShape2D_swsmm")

[node name="bomb" type="Area2D" parent="."]
position = Vector2(158, 47)

[node name="bomb_sprite" type="Sprite2D" parent="bomb"]
scale = Vector2(0.09, 0.09)
texture = ExtResource("6_pcik8")

[node name="bomb_collision" type="CollisionShape2D" parent="bomb"]
scale = Vector2(1.25, 1.25)
shape = SubResource("CircleShape2D_wans5")

[node name="bomb2" type="Area2D" parent="."]
position = Vector2(189, 175)

[node name="bomb_sprite" type="Sprite2D" parent="bomb2"]
scale = Vector2(0.09, 0.09)
texture = ExtResource("6_pcik8")

[node name="bomb_collision" type="CollisionShape2D" parent="bomb2"]
scale = Vector2(1.25, 1.25)
shape = SubResource("CircleShape2D_wans5")

[node name="bomb3" type="Area2D" parent="."]
position = Vector2(315, 161)

[node name="bomb_sprite" type="Sprite2D" parent="bomb3"]
scale = Vector2(0.09, 0.09)
texture = ExtResource("6_pcik8")

[node name="bomb_collision" type="CollisionShape2D" parent="bomb3"]
scale = Vector2(1.25, 1.25)
shape = SubResource("CircleShape2D_wans5")

[node name="bomb4" type="Area2D" parent="."]
position = Vector2(366, 284)

[node name="bomb_sprite" type="Sprite2D" parent="bomb4"]
scale = Vector2(0.09, 0.09)
texture = ExtResource("6_pcik8")

[node name="bomb_collision" type="CollisionShape2D" parent="bomb4"]
scale = Vector2(1.25, 1.25)
shape = SubResource("CircleShape2D_wans5")

[node name="bomb5" type="Area2D" parent="."]
position = Vector2(446, 32)

[node name="bomb_sprite" type="Sprite2D" parent="bomb5"]
scale = Vector2(0.09, 0.09)
texture = ExtResource("6_pcik8")

[node name="bomb_collision" type="CollisionShape2D" parent="bomb5"]
scale = Vector2(1.25, 1.25)
shape = SubResource("CircleShape2D_wans5")

[connection signal="body_entered" from="Egg" to="." method="_on_egg_body_entered"]
[connection signal="body_entered" from="open_map/finish" to="." method="_on_finish_body_entered"]
[connection signal="body_entered" from="open_map/vortex" to="." method="_on_vortex_body_entered"]
[connection signal="body_exited" from="open_map/vortex" to="." method="_on_vortex_body_exited"]
[connection signal="body_entered" from="bomb" to="." method="_on_bomb_body_entered"]
[connection signal="body_entered" from="bomb2" to="." method="_on_bomb_2_body_entered"]
[connection signal="body_entered" from="bomb3" to="." method="_on_bomb_3_body_entered"]
[connection signal="body_entered" from="bomb4" to="." method="_on_bomb_4_body_entered"]
[connection signal="body_entered" from="bomb5" to="." method="_on_bomb_5_body_entered"]
